--- a/task2/index.html
+++ b/task2/index.html
@@ -164,7 +164,7 @@
             </section>
 
             <!--===== WORK =====-->
-            <section class="work section" id="work">
+<!--             <section class="work section" id="work">
                 <h2 class="section-title">Work</h2>
 
                 <div class="work__container bd-grid">
@@ -187,7 +187,7 @@
                         <img src="assets/img/work6.jpg" alt="">
                     </a>
                 </div>
-            </section>
+            </section> -->
 
             <!--===== CONTACT =====-->
             <section class="contact section" id="contact">
